--- a/portal/StockSpecialist/views/home.html
+++ b/portal/StockSpecialist/views/home.html
@@ -2,17 +2,22 @@
   <div class="page-header">
      <h1>Stock Specialist</h1>
   </div>
-<div class="row">
+<div class="row" ng-repeat="stock in stockDetails">
   <div class="col-lg-6">
    <uib-accordion close-others="oneAtATime">
-     <div uib-accordion-group class="panel-default" ng-repeat="stock in stockDetails" >
+     <div uib-accordion-group class="panel-default" ng-repeat="stock in stockDetails">
       <uib-accordion-heading>
         {{stock.Name}} <i class="pull-right glyphicon glyphicon-chevron-right"></i>
       </uib-accordion-heading>
-      {{stock.Symbol}}<br/>
-      {{stock.MarketCap}}<br/>
-      {{stock.Sector}}<br/>
-      {{stock.Industry}}<br/>
+      <div class="col-lg-4">
+          {{stock.Symbol}}<br/>
+          {{stock.MarketCap}}<br/>
+          {{stock.Sector}}<br/>
+          {{stock.Industry}}<br/>
+      </div>
+      <div class="col-lg-4">
+          <a class="btn btn-primary" data-ui-sref="home.details({symbol:stock.Symbol})">Find Stock Value</a>
+      </div>
       </div>
    </uib-accordion>
   </div>
